assets/themes/twitter/css/post.css
/* ... */
a:hover{
 text-decoration:none;
}
input[type="button"],input[type="submit"]{
	transition:0.5s all;
	-webkit-transition:0.5s all;
	-moz-transition:0.5s all;
	-o-transition:0.5s all;
	-ms-transition:0.5s all;
}
h1,h2,h3,h4,h5,h6{
	margin:0;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
}	
p,blockquote{
       margin:0;
       letter-spacing:1px;
       line-height: 1.5em;
       font-size: 22px;
       width: 100%;
       max-width: 740px;
       font-family: 'Times New Roman', Times, serif, Georgia;
       margin-left: auto;
       margin-right: auto;
}
p{
       color: black;
       padding-bottom: 1.3em;
}
blockquote{
    color: #666;
}
figure{
//  width: 100%;
  max-width: 740px;
  margin-left: auto;
  margin-right: auto;
}
figure .float{
  max-width: 450px;
}
figure img {
width: 100%;
}
label{
	margin:0;
}
/*-- banner --*/
.header h1 {
    margin: 0;
    margin-top: 0.5em;
}
.header {
    padding: 2em 2.5em;
}
.banner {
    background: url(../images/bg.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    min-height: 770px;
    position: relative;
}
.banner-image-w3layouts img {
    position: absolute;
    bottom: -15px;
    right: 6%;
    width: 485px;
}
.w3_agile_logo{
	float:left;
}
.title1_agile {
    float: left;
    width: 70%;
    margin-top: 4em;
}
.title2_agile {
    float: left;
    width: 60%;
    margin-top: 2em;
}
.links_agile {
    float: left;
    width: 60%;
    margin-top: 1em;
    margin-bottom: 0em;
}
.title1_agile h3 {
    margin: 0;
    font-size: 3.7em;
    font-weight: bold;
    letter-spacing: 1px;
    color: #fff;
    text-shadow: 3px 3px 0px #024a3f;
    //font-family: 'Pacifico', cursive;
    margin-bottom: 0.3em;
}
.title1_agile h3 span {
    display: block;
    margin-bottom: 0.3em;
}
.links_agile li{
	display:inline-block;
	font-size:1em;
}
.links_agile ul li a {
    padding:10px 20px;
    text-decoration: none;
    color: #212121;
    background: #ff2d37;
    color: #fff;
    letter-spacing: 1px;
    line-height: 3em;
    border: 2px solid #ff2d37;
	box-shadow: 0 -4px 27px 0 rgba(0,0,0,0.2), 0 4px 7px 0 rgba(0,0,0,0.19);
}
.links_agile ul li a:hover {
      border: 2px solid #87509c;
       background: #87509c;
}
.more:hover {
    border: 2px solid #fff;
    color: #ffffff;
    background: none;
}
.more{
    border: 2px solid #026757;
    background: #036959;
    color: #ffffff;
}
.title2_agile h6 {
    color: #023e35;
    letter-spacing: 3px;
    text-shadow: 0 1px 2px rgb(3, 128, 108);
	font-size:1.4em;
	
}
.title2_agile p {
    font-size: 1.1em;
    color: #fff;
    line-height: 2em;
    letter-spacing: 1px;
    margin: 2em 0 2.5em 0;
}
/*-- //banner --*/
/*-- banner_bottom --*/
.banner_bottom,.experience,#portfolio,.pro_cercles  {
    padding: 6em 0;
}
.header img {
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    border-radius: 50%;
    display: inline-block;
    border: 3px solid rgba(64, 66, 65, 0.04);
	    box-shadow: 0 1px 1px rgba(0, 0, 0, .50);
    margin-right: 1.7em;
    float: left;
}
.header h1 {
	position: relative;
}
.banner_bottom_info {
    margin: 0 auto;
    text-align: left;
	width: 60%;
}
.banner_bottom_info h4{
    color: #2F2F2F;
    font-family: "Poppins",sans-serif;
    font-weight:bold;
    line-height: 1.5;
	font-size:2em;
	letter-spacing:1px;
}
.banner_bottom_info h6{
    color: #2F2F2F;
    font-size: 1.6em;
    line-height: 1.9;
    letter-spacing: 3px;
    margin: 1.5em 0;
}
.banner_bottom_info p {
    //color: #666;
}
 .address li:last-child {
    margin-bottom: 0;
}
ul.address {
    margin: 4em auto 0 0;
    text-align: center;
    border-top: 1px solid #ddd;
    padding-top: 2em;
}
.address li,.address li a {
    list-style: none;
    display: inline-block;
    margin-right:18px;
    color: #777;
    font-size: 14px;
    letter-spacing: 1px;
}
.address li i {
    margin-right:0.2em;
    color: #00a98f;
    width: 32px;
    height: 32px;
    text-align: center;
    line-height: 30px;
}
h3.tittle_w3layouts {
    font-size: 3em;
    color: #262c38;
    letter-spacing: 1px;
    position: relative;
    font-weight: 700;
}
p.sub_para {
    color: #00a98f;
}
/*-- banner_bottom --*/

/*-- /skills --*/

.bargrids-left {
    margin-right: 40px;
}
.bar-grids {
    width:48%;
}
.bar-grids h4 {
    font-size: 1.6em;
    color: #ffffff;
    letter-spacing: 1px;
    margin-bottom: 1.4em;
    padding-bottom: 0em;
    font-weight: 600;
}

.bar-grids h4 span.fa {
    margin-right: 0.8em;
    color: #ecb731;
}

.progress {
    height: 12px;
    margin-bottom: 2.2em;
    background-color: #dadde0;
    -webkit-border-radius:11px;
    -moz-border-radius:11px;
    -o-border-radius:11px;
    -ms-border-radius:11px;
    border-radius:11px;
}

.prgs-w3agile-last {
    margin-bottom: 0!important;
}

.progress-bar {
    background-color: #0c0c0c;
}

.bar-grids h6 {
    font-size: 1em;
    color: #ff2d37;
    margin-bottom: 0.6em;
    text-transform: capitalize;
    font-weight:700;
    letter-spacing: 2px;
}

.bar-grids h6 span {
    float: right;
    font-size: 1em;
}

.progress-striped .progress-bar,
.progress-bar-striped {
    background-image: none!important;
}

.skill_section {
    background: url(../images/books_bg.jpg)no-repeat 0px 0px;
    background-size: cover;
    padding: 0;
    padding-top: 9em;
}
.skill_info_wthree_agile {
    margin-top: 4em;
}


/*-- //skills --*/
/*--work--*/
.work {
    background: #000;
}
.work-left {
    text-align: right;
    padding: 4em 5em 0 0;
}
.work-right {
    border-left: 4px solid #ebebec;
    padding: 4em 0 2em 6em;
}
/* ... */

